# T-Lab

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: grpo_action.yaml  grpo_text_action.yaml  sft.yaml
report/: main.tex  refs.bib
scripts/: collect_expert.py  evaluate.py  make_plots.py  run_all.sh  show_dataset_stats.py  smoke_test.py  summarize_results.py
src/common/: checkpoints.py  config.py  logging.py  metrics.py  plotting.py  schedulers.py  seed.py
src/data/: collate.py  dataset.py  transforms.py
src/env/: expert.py  make_env.py  wrappers.py
src/grpo/: grpo_core.py  losses.py  rollout.py  train_grpo_action.py  train_grpo_text_action.py
src/model/: action_tokenizer.py  generation.py  nanovlm_loader.py  policy_head.py
src/sft/: eval_sft.py  train_sft.py
