[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanovlm-minigrid-grpo"
version = "0.1.0"
description = "Reproducible NanoVLM fine-tuning and GRPO pipeline on MiniGrid EmptyEnv"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "T_Lab"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src"]
